--- a/mentions-legales.html
+++ b/mentions-legales.html
@@ -6,8 +6,7 @@
         <link href="css/style.min.css" rel="stylesheet" type="text/css" media="all" />
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-        <meta name="keywords" content="conseil,recrutement,formation,commercial,marketing,management,cabinet,organisme,ressources humaines,chef entreprise,accompagnement,coaching,RH,business,enseignement,compétences,entretiens,plan action,stratégie entreprise,stratégie comerciale,diagnostic,étude marché,commerce,learning" />
-        <meta name="description" content="BAWOL Consulting accompagne votre entreprise et vous apporte des solutions opérationnelles en management, recrutement, marketing et action commerciale." />
+        <meta name="description" content="Mentions légales" />
     </head>
     <body>
     <header>
