Add google meta

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>BAWOL Consulting - Au coeur de l'Entreprise, des Hommes</title>
     <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css" media="all" />
 	<link href="css/style.min.css" rel="stylesheet" type="text/css" media="all" />
+	<meta name="google-site-verification" content="NzfWU6-3tkLbQ2IMH_Kb8IMru1IaIqJgqFQTr7D5hVI" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<meta name="keywords" content="conseil,recrutement,formation,commercial,marketing,management,cabinet,organisme,ressources humaines,chef entreprise,accompagnement,coaching,RH,business,enseignement,compétences,entretiens,plan action,stratégie entreprise,stratégie comerciale,diagnostic,étude marché,commerce,learning" />
