--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
                 <h3>BAWOL Consulting</h3>
                 <p>Au coeur de l'Entreprise, des Hommes.</p>
             </div>
+            <div class="video-wrapper embed-responsive embed-responsive-16by9">
+                <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/37Jln_YjDh4" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
+            </div>
         </div>
     </div>
 
