--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
     <section id="depot-cv" class="container">
         <h2>Dépôt de CV</h2>
         <p>Vous êtes en recherche active ou vous répondez à une annonce émise par notre cabinet sur un site de recrutement :<br>
-            Faite nous parvenir votre CV à l'adresse mail <a href="mailto:brunobawolconsulting@gmail.com">brunobawolconsulting@gmail.com</a></p>
+            Faite nous parvenir votre CV à l'adresse email <a href="mailto:brunobawolconsulting@gmail.com">brunobawolconsulting@gmail.com</a></p>
     </section>
 
     <section id="conseil" class="container">
