--- a/index.html
+++ b/index.html
@@ -194,6 +194,8 @@
                 <p><a class="ico ico-phone" href="tel:0650308347">06 50 30 83 47</a></p>
                 <p><a class="ico ico-linkedin" href="https://fr.linkedin.com/in/bruno-bawol-5185bb5b">LinkedIn</a> </p>
             </address>
+
+            <a id="datadock" href="https://www.data-dock.fr">Référencé Datadock</a>
         </div>
         <div class="copyright container">© 2015 - 2017 BAWOL Consulting - <a href="/mentions-legales.html">Mentions légales</a></div>
     </footer>
