Mis à jour adresse

--- a/mentions-legales.html
+++ b/mentions-legales.html
@@ -84,14 +84,14 @@
 
             <address id="contact">
                 <h3>Contactez nous</h3>
-                <p>61 AVENUE CHARLES DE GAULLE</p>
-                <p>02000 LAON</p>
+                <p>4 QUATER RUE DE L'EGLISE</p>
+                <p>02840 SAMOUSSY</p>
                 <p><a class="ico ico-at" href="mailto:brunobawolconsulting@gmail.com">brunobawolconsulting@gmail.com</a></p>
                 <p><a class="ico ico-phone" href="tel:0650308347">06 50 30 83 47</a></p>
                 <p><a class="ico ico-linkedin" href="https://fr.linkedin.com/in/bruno-bawol-5185bb5b">LinkedIn</a> </p>
             </address>
         </div>
-        <div class="copyright container">© 2015 - 2017 BAWOL Consulting - <a href="/mentions-legales.html">Mentions légales</a></div>
+        <div class="copyright container">© 2015 - 2019 BAWOL Consulting - <a href="/mentions-legales.html">Mentions légales</a></div>
     </footer>
 
     <a href="#" id="toTop" style="display: block;"> <span id="toTopHover" style="opacity: 1;"> </span></a>
